force-app/main/default/objects/Low_Stock_Alert__e/Low_Stock_Alert__e.object-meta.xml
<CustomObject>
    <description>when stock drops, the flow builds and sends the event</description>
    <label>Low Stock Alert</label>
    <pluralLabel>Low Stock Alerts</pluralLabel>
</CustomObject>