force-app/main/default/objects/Low_Stock_Alert__e/fields/Product_Id__c.field-meta.xml
<CustomField>
    <fullName>Product_Id__c</fullName>
    <label>Product_Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>